Update: 同步最新修改
- 更新 screenshot_config.json: 配置文件优化
- 更新 screenshot_gui.py: GUI界面改进
- 更新 dist/ScreenshotTool.exe: 重新编译的可执行文件
- 更新 dist/screenshot_config.json: 分发配置文件更新

--- a/screenshot_config.json
+++ b/screenshot_config.json
@@ -9,5 +9,6 @@
     "show_preview": false,
     "quality_preset": "low",
     "show_success_popup": false,
-    "screenshot_mode": "auto"
+    "screenshot_mode": "auto",
+    "language": "en"
 }
