Add custom prefix feature
✨ 新增自定义前缀功能:
- 添加自定义前缀输入框到GUI界面
- 支持中英文界面切换
- 默认前缀设置为 'read image: '
- 剪贴板内容将自动添加前缀
- 更新配置文件和核心截图功能
- 重新编译可执行文件

🎯 使用场景:
- 方便Claude Code读取图片时的标识
- 支持Markdown格式前缀如 '![截图]('
- 可自定义任意前缀文本

--- a/screenshot_config.json
+++ b/screenshot_config.json
@@ -10,5 +10,6 @@
     "quality_preset": "low",
     "show_success_popup": false,
     "screenshot_mode": "auto",
-    "language": "en"
+    "language": "en",
+    "custom_prefix": "read image: "
 }
